--- a/index.html
+++ b/index.html
@@ -11,19 +11,29 @@
 <body>
     
     <section>
-        <div class="landing-page">
-            <h1>Studio TreeLight</h1>
-            <div class="landing-page-content">
-                <p>Tag line as well as mission statemet here</p>
-                <div class="hyper-links">
-                    <a class="learn-more-link" href="">Learn more</a>
-                </div>
-            </div>
+        <div class="landing-page section">
+
         </div>
     </section>
 
     <section>
-        <div class="">
+        
+    </section>
+
+    <section>
+        <div class="about-page section">
+
+        </div>
+    </section>
+
+    <section>
+        <div class="product-page section">
+
+        </div>
+    </section>
+
+    <section>
+        <div class="contact-page section">
 
         </div>
     </section>
