implemented colours block

--- a/index.html
+++ b/index.html
@@ -10,30 +10,29 @@
 
 <body>
     
-    <section>
-        <div class="landing-page section">
+    <section class="landing-page section">
+        <div class="bg-block-1"></div>
+        <div class="bg-block-2"></div>
+    </section>
+
+    <section class="about-page section">
+        <div class="bg-block-3"></div>
+    </section>
+
+    <section class="product-page section">
+        <div>
 
         </div>
     </section>
 
-    <section>
-        
-    </section>
-
-    <section>
-        <div class="about-page section">
+    <section class="Projects-page section">
+        <div>
 
         </div>
     </section>
 
-    <section>
-        <div class="product-page section">
-
-        </div>
-    </section>
-
-    <section>
-        <div class="contact-page section">
+    <section class="contact-page section">
+        <div>
 
         </div>
     </section>
