added video to landing-page bg

--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
 
 <body>
     
-    <section class="landing-page section">
-        <div class="bg-block-1"></div>
-        <div class="bg-block-2"></div>
+    <section class="landing-page">
+        <div class="video-container">
+            <video autoplay loop id="landing-vid-bg">
+                <source src="assets/Landing_page_bg_vid.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+
+            <div class="landing-page-content">
+
+            </div>
+        </div>
     </section>
 
     <section class="about-page section">
-        <div class="bg-block-3"></div>
     </section>
 
     <section class="product-page section">
