fixed video positioning and added hyper link section

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <section class="landing-page">
         <div class="video-container">
             <video autoplay loop id="landing-vid-bg">
-                <source src="assets/Landing_page_bg_vid.mp4" type="video/mp4">
-                Your browser does not support the video tag.
+                <source src="assets/landing_page_bg_vid.mp4" type="video/mp4">
             </video>
 
             <div class="landing-page-content">
@@ -23,25 +22,8 @@
         </div>
     </section>
 
-    <section class="about-page section">
-    </section>
+    <section class="info-hyper-links">
 
-    <section class="product-page section">
-        <div>
-
-        </div>
-    </section>
-
-    <section class="Projects-page section">
-        <div>
-
-        </div>
-    </section>
-
-    <section class="contact-page section">
-        <div>
-
-        </div>
     </section>
 
 </body>
