removed bg video

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 <body>
     
     <section class="landing-page">
-        <div class="video-container">
-            <video autoplay loop id="landing-vid-bg">
-                <source src="assets/landing_page_bg_vid.mp4" type="video/mp4">
-            </video>
+        <div class="landing-bg-container">
+
 
             <div class="landing-page-content">
 
