added new background image

--- a/index.html
+++ b/index.html
@@ -11,17 +11,9 @@
 <body>
     
     <section class="landing-page">
-        <div class="landing-bg-container">
+        <div class="landing-page-container">
 
-
-            <div class="landing-page-content">
-
-            </div>
         </div>
-    </section>
-
-    <section class="info-hyper-links">
-
     </section>
 
 </body>
