added landing page

--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style_files/index_style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poltawski+Nowy:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <title>Studio TreeLight</title>
 </head>
 
 <body>
     
-    <section class="landing-page">
-        <div class="landing-page-container">
-
+    <section class="landing-page-container">
+        <div class="landing-page-content">
+            <h1 class="company-name">Studio TreeLight</h1>
+            <h3 class="tagline">Expand Your Vision, Illuminate Your Story.</h3>
         </div>
     </section>
 
 </body>
-
-
-
-
 
 </html>
 
