--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 </head>
 
 <body>
+
+    <header>
+        <div class="navbar-container">
+            <a href="#" class="navbar-company-name">Studio TreeLight<img src="./assets/mock_logo.png" alt="Logo"></a>
+            <div class="navbar-links">
+                <a href="#">Home</a>
+                <a href="#">About Us</a>
+                <a href="#">Services</a>
+                <a href="#">Library</a>
+                <a href="#">Contact Us</a>
+            </div>
+        </div>
+    </header>
     
     <section class="landing-page-container">
         <div class="landing-page-content">
