finished navigation bar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
     <header>
         <div class="navbar-container">
-            <a href="#" class="navbar-company-name">Studio TreeLight<img src="./assets/mock_logo.png" alt="Logo"></a>
+            <a href="#" class="navbar-company-name">
+                Studio TreeLight<img src="./assets/mock_logo.png" alt="Logo">
+            </a>
             <div class="navbar-links">
                 <a href="#">Home</a>
                 <a href="#">About Us</a>
@@ -31,6 +33,10 @@
             <h1 class="company-name">Studio TreeLight</h1>
             <h3 class="tagline">Expand Your Vision, Illuminate Your Story.</h3>
         </div>
+    </section>
+
+    <section>
+
     </section>
 
 </body>
