removed website and inserted new format and styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
 
 <body>
 
-    <header>
+
+
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+<!--     <header>
         <div class="navbar-container">
             <a href="#" class="navbar-company-name">
                 Studio TreeLight<img src="./assets/mock_logo.png" alt="Logo">
@@ -35,14 +50,16 @@
         </div>
     </section>
 
-    <section>
-
-    </section>
-
-</body>
-
-</html>
-
-
-
-
+    <section class="short-bio-container">
+        <div class="short-bio-content">
+            <div class="short-bio-header">
+                <h2 class="short-bio-title">Beyond Cinematic, Beyond Imagination.</h2>
+            </div>
+            <p class="short-bio-paragraph">Welcome to Studio TreeLight, where innovative storytelling meets cinematic
+                 excellence. Established in 2024, our dynamic team is dedicated to crafting unforgettable
+                 experiences on the silver screen. Join us on this cinematic adventure where every frame tells
+                 a story, and the magic of filmmaking knows no bounds.
+            </p>
+            <a href="#" class="short-bio-link">Learn More ></a>
+        </div>
+    </section> -->
