--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
 
 <body>
 
-
+    <section class="landing-page-container">
+        <a href="https://www.youtube.com/watch?v=HZBA19stPKM" target="_blank">
+            <div class="video-overlay"></div>
+            <video autoplay muted loop id="landing-page-vid" src="./assets/landing_page_bg.mp4" type="video/mp4"></video>
+        </a>
+        <div class="landing-page-header">
+            <h1 id="landing-page-title">Studio TreeLight</h1>
+            <p id="tagline">Expand Your Vision, Illuminate Your Story.</p>
+        </div>
+    </section>
 
 </body>
 
