added short bio section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
         </div>
     </section>
 
+    <section class="short-bio-container">
+        <div class="short-bio-content">
+            <h2 id="short-bio-title">Beyond Cinematic, Beyond Imagination.</h2>
+            <p id="short-bio-paragraph">Welcome to Studio TreeLight, where innovative storytelling meets cinematic
+                excellence. Established in 2024, our dynamic team is dedicated to crafting unforgettable
+                experiences on the silver screen. Join us on this cinematic adventure where every frame tells
+                a story, and the magic of filmmaking knows no bounds.
+           </p>
+            <a href="#" class="read-more-link">Our Story</a>
+        </div>
+    </section>
+
 </body>
 
 </html>
@@ -51,13 +63,6 @@
             </div>
         </div>
     </header>
-    
-    <section class="landing-page-container">
-        <div class="landing-page-content">
-            <h1 class="company-name">Studio TreeLight</h1>
-            <h3 class="tagline">Expand Your Vision, Illuminate Your Story.</h3>
-        </div>
-    </section>
 
     <section class="short-bio-container">
         <div class="short-bio-content">
